development branch created

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">LinkedMe</string>
+    <string name="facebook_app_id">1343643482425305</string>
 </resources>
